[workspace]
members = [
  "packages/remove-export",
  "packages/keep-platform",
  "packages/keep-export"
]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"
