[workspace]
members = [
  "packages/remove-export",
  "packages/keep-platform",
  "packages/keep-export",
  "packages/node-transform"
]

[workspace.dependencies]
anyhow                      = "1.0.83"
fxhash                      = "0.2.1"
serde                       = "1.0.203"
serde_json                  = "1.0.117"
swc_atoms                   = "2.0.0"
swc_common                  = "1.0.0"
swc_core                    = "1.0.0"
swc_ecma_ast                = "1.0.0"
swc_ecma_parser             = "1.0.0"
swc_ecma_utils              = "1.0.0"
swc_ecma_visit              = "1.0.0"
swc_plugin_macro            = "1.0.0"
swc_plugin_proxy            = "1.0.0"
testing                     = "1.0.0"
tracing                     = "0.1.40"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"
